# tg_manager

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: manual.html
scripts/: setup_session.py
src/: main.py
src/bot_interface/: __init__.py  callback_router.py  command_router.py  menu_builder.py
src/bot_interface/handlers/: admin_handler.py  config_handler.py  forward_handler.py  inspect_handler.py  keyword_handler.py  llm_handler.py  plugin_handler.py  start_handler.py  summary_handler.py
src/bot_interface/middlewares/: auth.py  throttle.py
src/clients/: __init__.py  bot.py  dual_client.py  userbot.py
src/core/: __init__.py  config.py  constants.py  event_bus.py  exceptions.py  rate_limiter.py
src/database/: __init__.py  base.py  engine.py
src/database/models/: __init__.py  chat.py  forward_rule.py  message.py  monitor_keyword.py  rule.py  scheduled_job.py  user.py
src/database/repositories/: __init__.py  base_repo.py  chat_repo.py  forward_rule_repo.py  keyword_repo.py  message_repo.py  rule_repo.py  schedule_repo.py  user_repo.py
src/llm/: __init__.py  base_provider.py  prompt_templates.py  provider_factory.py
src/llm/providers/: __init__.py  claude_provider.py  (+4 more)
src/plugins/: __init__.py  plugin_base.py  plugin_loader.py  plugin_manager.py
src/utils/: media_utils.py  text_utils.py  time_utils.py  validators.py
tasks/: lessons.md  todo.md
tests/test_core/: test_command_router.py  test_database_manager.py  test_plugin_config.py
tests/test_plugins/: test_admin_handler.py
(+14 files in other folders)
